spotless apply
Signed-off-by: Zirui Song <zrsong@amazon.com>